--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>RClone Manager</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
 </head>
 
 <body class="mat-typography">
